-完成下载管理界面 -添加漫画目录下载界面的actionmode和CheckBox的选择

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile project(':jiyu')
 }
 
 static def getSelfDefinedVersion(type) {
