--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CartoonActivity" />
+        <activity android:name=".CartoonActivity" android:theme="@style/AppTheme"/>
         <activity
             android:name=".ImgActivity"
             android:theme="@style/AppTheme.NoActionBar" />
