--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,13 @@ android {
         javaMaxHeapSize "4g"
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+    packagingOptions{
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
@@ -61,8 +68,11 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-sqlcipher:${dbflow_version}"
+    //图片放大
+    compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    compile "io.reactivex.rxjava2:rxjava:2.1.0"
 }
-
 
 
 
@@ -72,7 +82,7 @@ static def getSelfDefinedVersion(type) {
     Process process = "git rev-list --count HEAD".execute()
     process.waitFor()
     int cccc = process.getText().toInteger()
-
+    cccc=21
     if ("code" == type) {
         cccc
     } else if ("name" == type) {
