--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'com.android.application'
 def dbflow_version = "4.1.2"
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'jiyu'
+            keyPassword '445566'
+            storeFile file('F:/我的坚果云/Android/jiyu.jks')
+            storePassword '445566'
+        }
+    }
     compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
@@ -13,28 +21,36 @@ android {
         versionName getSelfDefinedVersion("name")
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+            signingConfig signingConfigs.config
         }
-        debug{
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+            debuggable true
+            jniDebuggable true
+            renderscriptDebuggable true
         }
     }
     dexOptions {
         jumboMode true
         javaMaxHeapSize "4g"
     }
-
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/rxjava.properties'
+    }
+    productFlavors {
     }
 }
 
@@ -51,17 +67,16 @@ dependencies {
     compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile ('cn.bmob.android:bmob-sdk:3.5.7',{
+    compile('cn.bmob.android:bmob-sdk:3.5.7', {
         //exclude group: 'cn.bmob.android'
     })
-    implementation ('com.squareup.retrofit2:retrofit:2.3.0',{
-        exclude group:'com.squareup.okio',module:'okio'
+    implementation('com.squareup.retrofit2:retrofit:2.3.0', {
+        exclude group: 'com.squareup.okio', module: 'okio'
     })
     compile 'org.jsoup:jsoup:1.10.3'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     // RXJava2
     implementation "com.github.Raizlabs.DBFlow:dbflow-rx2:${dbflow_version}"
     annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
@@ -71,7 +86,9 @@ dependencies {
     //图片放大
     compile 'com.github.chrisbanes:PhotoView:2.1.3'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
-    compile "io.reactivex.rxjava2:rxjava:2.1.0"
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    //bugly
+    compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
 }
 
 
